--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Stats from "../components/Stats.astro";
 import TimeZone from "../components/TimeZoneCard.astro";
 import AboutMe from "../components/AboutMe.astro";
 import Now from "../components/Now.astro";
+import ThemeSlider from "../components/ThemeSlider.astro";
 ---
 
 <script>
@@ -61,5 +62,8 @@ import Now from "../components/Now.astro";
     </Card>
     
     <TimeZone />
+    
   </main>
 </Layout>
+
+
