--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -34,7 +34,7 @@ import { Icon } from "astro-icon/components";
   >
     <a
       href="/"
-      class="text-white w-auto flex bg-neutral-900 hover:bg-neutral-800 px-4 py-2 mb-8 rounded-lg"
+      class="w-auto flex text-white bg-neutral-900 hover:bg-neutral-800 px-4 py-2 mb-8 border-1 border-solid border-neutral-600 rounded-lg"
       >
       <Icon size={22} name="mdi:arrow-back" class="h-6 mr-1" />
       Back To Home
