--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -15,7 +15,7 @@ import { Image } from "astro:assets";
   <div class="flex w-full h-full">
     <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
       <div class="flex flex-col h-full">
-        <h6 class="text-sm font-light m-0 text-gray-500">welcome</h6>
+        <h6 class="text-sm font-light m-0">welcome</h6>
         <p class="m-0 font-light text-xl">
           Hi, I'm <b class="font-bold">Mario Parreño</b>, a Machine Learning engineer with experience in Computer Vision, NLP, and Generative AI, automating problems that save companies time and money. Currently, I’m focused on tackling real-world problems with Deep Learning.
         </p>
@@ -23,25 +23,25 @@ import { Image } from "astro:assets";
       <div class="flex gap-4">
         <a href={LINKS.github} aria-label="github profile" target="_blank" class="hover:text-darkslate-500">
           <Button aria-label="github profile">
-            <Icon size={24} name="mdi:github" class="h-6" />
+            <Icon size={24} name="mdi:github" class="h-6 text-gray-500" />
             <span class="sr-only">GitHub Profile</span>
           </Button>
         </a>
         <a href={LINKS.linkedin} aria-label="linkeding profile" target="_blank" class="hover:text-darkslate-500">
           <Button aria-label="linkedin profile">
-            <Icon size={24} name="mdi:linkedin" class="h-6" />
+            <Icon size={24} name="mdi:linkedin" class="h-6 text-gray-500" />
             <span class="sr-only">Linkedin Profile</span>
           </Button>
         </a>
         <a href={LINKS.aidventure} aria-label="dribble profile" target="_blank" class="hover:text-darkslate-500">
           <Button aria-label="dribble profile">
-            <Icon size={24} name="mdi:backpack-outline" class="h-6" />
+            <Icon size={24} name="mdi:backpack-outline" class="h-6 text-gray-500" />
             <span class="sr-only">Aidventure Blog</span>
           </Button>
         </a>
         <a href={LINKS.kaggle} aria-label="dribble profile" target="_blank" class="hover:text-darkslate-500">
           <Button aria-label="dribble profile">
-            <Icon size={12} name="fa-brands:kaggle" class="h-6" />
+            <Icon size={12} name="fa-brands:kaggle" class="h-6 text-gray-500" />
             <span class="sr-only">Kaggle Profile</span>
           </Button>
         </a>
