--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -19,30 +19,32 @@ const { title, description, page, slug, frontmatter } = Astro.props;
 const image = `${Astro.url.origin}/og-image-dark.png`;
 
 const schema = {
-    "@context": "http://schema.org",
-    "@type": "Person",
-    name: "Mario Parreño",
-    url: "https://maparla.es",
-    sameAs: [
-      "https://www.linkedin.com/in/mario-parre%C3%B1o-lara-a33585125/",
-      "https://github.com/MarioProjects",
-    ],
-    image: "https://maparla.es/og-image-dark.png",
-    jobTitle: "Machine Learning Engineer",
-    worksFor: {
-      "@type": "Organization",
-      name: "Self-Employed",
-      address: {
-        "@type": "PostalAddress",
-        addressLocality: "Spain",
-        addressCountry: "ES",
-      },
+  "@context": "http://schema.org",
+  "@type": "Person",
+  name: "Mario Parreño",
+  url: "https://maparla.es",
+  sameAs: [
+    "https://www.linkedin.com/in/mario-parre%C3%B1o-lara-a33585125/",
+    "https://github.com/MarioProjects",
+  ],
+  image: "https://maparla.es/og-image-dark.png",
+  jobTitle: "Machine Learning Engineer",
+  worksFor: {
+    "@type": "Organization",
+    name: "Self-Employed",
+    address: {
+      "@type": "PostalAddress",
+      addressLocality: "Spain",
+      addressCountry: "ES",
     },
-    nationality: {
-      "@type": "Country",
-      name: "Spain",
-    },
-  }
+  },
+  nationality: {
+    "@type": "Country",
+    name: "Spain",
+  },
+};
+
+import "../../src/styles/global.css";
 ---
 
 <!doctype html>
@@ -106,6 +108,36 @@ const schema = {
     margin: 0;
     font-family: "Satoshi", sans-serif;
     -webkit-font-smoothing: antialiased;
+    background-color: rgba(var(--background)) !important;
+    color: rgba(var(--texts)) !important;
+
+    background-image: linear-gradient(
+        rgba(116, 116, 116, 0.2) 1px,
+        transparent 1px
+      ),
+      linear-gradient(
+        to right,
+        rgba(116, 116, 116, 0.2) 1px,
+        rgba(var(--background)) 1px
+      );
+    background-size: 75px 75px;
+    position: relative;
+  }
+
+  body::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      to bottom,
+      var(--background-backdrop-init),
+      var(--background-backdrop-end)
+    );
+    pointer-events: none; /* Ensure the gradient overlay does not interfere with other elements */
   }
 
   h1,
@@ -123,5 +155,4 @@ const schema = {
   b {
     font-weight: 700 !important;
   }
-  
 </style>
