--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -3,11 +3,11 @@ import Card from "./Card/index.astro";
 ---
 
 <Card colSpan="lg:col-span-2" rowSpan="md:row-span-2" title="My Stats">
-  <div class="flex flex-row w-full mt-3">
-    <div class="flex flex-col w-1/2">
+  <div class="flex flex-col sm:flex-row w-full mt-3">
+    <div class="flex w-full sm:w-1/2">
       <p>I love to train and test what I know, leading me to win several national and international competitions.</p>
     </div>
-    <div class="flex flex-col w-1/2 text-right">
+    <div class="flex flex-col w-full sm:w-1/2 text-right mt-2 sm:mt-0">
       <h2 class="text-2xl font-bold m-0 z-20">
         ~6
         <span class="text-primary-500">Years Experience</span>
