--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -30,7 +30,7 @@ import { Icon } from "astro-icon/components";
   description="I'm a Machine Learning engineer specializing in Computer Vision and Generative AI, automating problems that save companies time and money. Currently, I'm focused on tackling real-world problems with Deep Learning."
 >
   <main
-    class="z-10 w-screen flex flex-col justify-start items-start max-w-3xl mx-auto p-8"
+    class="z-10 w-screen h-full flex flex-col justify-start items-start max-w-3xl mx-auto p-8"
   >
     <a
       href="/"
