--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import ThemeSlider from "../components/ThemeSlider.astro";
   description="I'm a Machine Learning engineer specializing in Computer Vision and Generative AI, automating problems that save companies time and money. Currently, I'm focused on tackling real-world problems with Deep Learning."
 >
   <main
-    class="m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
+    class="m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[var(--max-portfolio-height)]"
   >
     <IntroCard />
     <AboutMe />
@@ -67,3 +67,20 @@ import ThemeSlider from "../components/ThemeSlider.astro";
 </Layout>
 
 
+<style>
+  :root {
+    --max-portfolio-height: min(90vh, 800px);
+  }
+
+  @media (min-width: 1024px) and (max-height: 800px) {
+    :root {
+      --max-portfolio-height: 800px;
+    }
+  }
+
+  @media (min-width: 1024px) and (min-height: 1000px) {
+    :root {
+      --max-portfolio-height: 900px;
+    }
+  }
+</style>
