--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Project from "../components/Project.astro";
 import { Icon } from "astro-icon/components";
 ---
 
@@ -41,77 +42,37 @@ import { Icon } from "astro-icon/components";
       </a
     >
     <h1 class="text-4xl font-bold mb-4">Personal Projects</h1>
-    <div class="flex flex-col gap-4 w-full space-y-2">
-      <div
-        class="card group overflow-hidden transfor-y-[-40%] bg-darkslate-500 shadow-lg rounded-lg border border-darkslate-100 hover:border-primary-500 align-start flex-none h-auto justify-start relative transform perspective-1200 w-full transition duration-75 ease-in-out col-span-1 md:col-span-2 p-6"
-      >
-        <a href="DASeGAN.pdf" target="_blank" rel="noopener noreferrer" class="h-full w-full">
-          <svg
-            width="1em"
-            height="1em"
-            viewBox="0 0 24 24"
-            class="h-6 float-right group-hover:text-primary-500 group-hover:translate-x-1 group-hover:-translate-y-1 transition-transform ease-in-out duration-100 z-20"
-            data-icon="ri:arrow-right-up-line"
-          >
-            <symbol id="ai:ri:arrow-right-up-line"
-              ><path
-                fill="currentColor"
-                d="m16.004 9.414l-8.607 8.607l-1.414-1.414L14.59 8H7.003V6h11v11h-2z"
-              ></path></symbol
-            ><use xlink:href="#ai:ri:arrow-right-up-line"></use>
-          </svg>
-          <div>
-            <h2 class="font-semibold text-2xl">DASeGAN</h2>
-            <p class="text-darkslate-300">
-              Framework for domain adaptation and generalization using GANs to map images into a universal domain for segmentation tasks, unifying appearance across domains through adversarial training.
-            </p>
-          </div>
-        </a>
-      </div>
-      <div
-        class="card group overflow-hidden transfor-y-[-40%] bg-darkslate-500 shadow-lg rounded-lg border border-darkslate-100 hover:border-primary-500 align-start flex-none h-auto justify-start relative transform perspective-1200 w-full transition duration-75 ease-in-out col-span-1 md:col-span-2 p-6"
-      >
-        <a href="https://dobble.maparla.es/" target="_blank" rel="noopener noreferrer" class="h-full w-full">
-          <svg
-            width="1em"
-            height="1em"
-            viewBox="0 0 24 24"
-            class="h-6 float-right group-hover:text-primary-500 group-hover:translate-x-1 group-hover:-translate-y-1 transition-transform ease-in-out duration-100 z-20"
-            data-icon="ri:arrow-right-up-line"
-          >
-            <use xlink:href="#ai:ri:arrow-right-up-line"></use>
-          </svg>
-          <div>
-            <h2 class="font-semibold text-2xl">
-              Dobble
-            </h2>
-            <p class="text-darkslate-300">
-              Through web scrapping techniques, it is possible to collect images of the works in the Prado museum. We have hundreds of algorithms to detect faces. We can obtain embeddings that encode our faces using Siamese neural networks. We just need to get the closest embedding!
-            </p>
-          </div>
-        </a>
-      </div>
-      <div
-        class="card group overflow-hidden transfor-y-[-40%] bg-darkslate-500 shadow-lg rounded-lg border border-darkslate-100 hover:border-primary-500 align-start flex-none h-auto justify-start relative transform perspective-1200 w-full transition duration-75 ease-in-out col-span-1 md:col-span-2 p-6"
-      >
-        <a href="https://agro.maparla.es/" target="_blank" rel="noopener noreferrer" class="h-full w-full">
-          <svg
-            width="1em"
-            height="1em"
-            viewBox="0 0 24 24"
-            class="h-6 float-right group-hover:text-primary-500 group-hover:translate-x-1 group-hover:-translate-y-1 transition-transform ease-in-out duration-100 z-20"
-            data-icon="ri:arrow-right-up-line"
-          >
-            <use xlink:href="#ai:ri:arrow-right-up-line"></use>
-          </svg>
-          <div>
-            <h2 class="font-semibold text-2xl">Agro Analysis</h2>
-            <p class="text-darkslate-300">
-              Analysis of the behavior of the Spanish fruit and vegetable market during the pandemic period with data from different sources. National competition obtaining the third place.
-            </p>
-          </div>
-        </a>
-      </div>
+    <div class="flex flex-col gap-4 w-full space-y-2 pb-12">
+      <Project
+        title="FLoRA"
+        description=" The aim of this project is to provide a simple and easy-to-use implementation of LoRA for fine-tuning LLMs. To test the implementation, we tackle the MNLI subtask of the GLUE benchmark."
+        url="https://github.com/AIdventures/flora"
+      />
+      <Project
+        title="microViT"
+        description="microViT is a streamlined implementation of the Vision Transformer (ViT) architecture, focusing solely on the encoder component. This project applies the microViT model to the classic task of handwritten digit classification using the MNIST dataset."
+        url="https://github.com/AIdventures/microViT"
+      />
+      <Project
+        title="microTransformer"
+        description="microTransformer is based on the raw implementation of the Transformer model, with the encoder and decoder parts. The task we will be working on is the sorting of a sequence of characters. For example, the sequence 'ABCB' will be sorted as 'ABBC'."
+        url="https://github.com/AIdventures/microTransformer"
+      />
+      <Project
+        title="DASeGAN"
+        description="Framework inspired in CycleGAN for domain adaptation and generalization using GANs to map images into a universal domain for segmentation tasks, unifying appearance across domains through adversarial training."
+        url="DASeGAN.pdf"
+      />
+      <Project
+        title="Dobble"
+        description="Through web scrapping techniques, it is possible to collect images of the works in the Prado museum. We have hundreds of algorithms to detect faces. We can obtain embeddings that encode our faces using Siamese neural networks. We just need to get the closest embedding!"
+        url="https://dobble.maparla.es"
+      />
+      <Project
+        title="Agro Analysis"
+        description="Analysis of the behavior of the Spanish fruit and vegetable market during the pandemic period with data from different sources. National competition obtaining the third place."
+        url="https://agro.maparla.es"
+      />
     </div>
   </main>
 </Layout>
