--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -126,7 +126,7 @@ import "../../src/styles/global.css";
 
   body::after {
     content: "";
-    position: absolute;
+    position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
