--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -14,17 +14,17 @@ import { LINKS } from "../lib/constants";
       <div>
         <h3 class="text-lg font-semibold">Senior Data Scientist</h3>
         <a class="text-sm text-primary-500" href="https://www.cognizant.com/">Cognizant</a>
-        <p class="text-sm text-gray-600"> 2022 - Current </p>
+        <p class="text-sm text-darkslate-200"> 2022 - Current </p>
       </div>
       <div>
         <h3 class="text-lg font-semibold">ML Engineer</h3>
         <a class="text-sm text-primary-500" href="https://iasolver.es/"> Solver IA </a>
-        <p class="text-sm text-gray-600"> 2022 - 2023 </p>
+        <p class="text-sm text-darkslate-200"> 2022 - 2023 </p>
       </div>
       <div>
         <h3 class="text-lg font-semibold">ML Researcher</h3>
         <a class="text-sm text-primary-500" href="https://www.upv.es/"> UPV </a>
-        <p class="text-sm text-gray-600"> 2018 - 2022 </p>
+        <p class="text-sm text-darkslate-200"> 2018 - 2022 </p>
       </div>
       <!-- 
       <a href="/work">
