--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -21,27 +21,27 @@ import { Image } from "astro:assets";
         </p>
       </div>
       <div class="flex gap-4">
-        <a href={LINKS.github} aria-label="github profile" target="_blank" class="hover:text-darkslate-500">
+        <a href={LINKS.github} aria-label="github profile" target="_blank">
           <Button aria-label="github profile">
-            <Icon size={24} name="mdi:github" class="h-6 text-gray-500" />
+            <Icon size={24} name="mdi:github" class="h-6 transition text-gray-500 hover:text-primary-500" />
             <span class="sr-only">GitHub Profile</span>
           </Button>
         </a>
-        <a href={LINKS.linkedin} aria-label="linkeding profile" target="_blank" class="hover:text-darkslate-500">
+        <a href={LINKS.linkedin} aria-label="linkeding profile" target="_blank">
           <Button aria-label="linkedin profile">
-            <Icon size={24} name="mdi:linkedin" class="h-6 text-gray-500" />
+            <Icon size={24} name="mdi:linkedin" class="h-6 transition text-gray-500 hover:text-primary-500" />
             <span class="sr-only">Linkedin Profile</span>
           </Button>
         </a>
-        <a href={LINKS.aidventure} aria-label="dribble profile" target="_blank" class="hover:text-darkslate-500">
+        <a href={LINKS.aidventure} aria-label="dribble profile" target="_blank">
           <Button aria-label="dribble profile">
-            <Icon size={24} name="mdi:backpack-outline" class="h-6 text-gray-500" />
+            <Icon size={24} name="mdi:backpack-outline" class="h-6 transition text-gray-500 hover:text-primary-500" />
             <span class="sr-only">Aidventure Blog</span>
           </Button>
         </a>
-        <a href={LINKS.kaggle} aria-label="dribble profile" target="_blank" class="hover:text-darkslate-500">
+        <a href={LINKS.kaggle} aria-label="dribble profile" target="_blank">
           <Button aria-label="dribble profile">
-            <Icon size={12} name="fa-brands:kaggle" class="h-6 text-gray-500" />
+            <Icon size={12} name="fa-brands:kaggle" class="h-6 transition text-gray-500 hover:text-primary-500" />
             <span class="sr-only">Kaggle Profile</span>
           </Button>
         </a>
