--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -12,26 +12,26 @@ import { LINKS } from "../lib/constants";
     </header>
     <div class="mt-4 space-y-4">
       <div>
+        <h3 class="text-lg font-semibold">Senior Machine Learning Engineer</h3>
+        <a class="text-sm text-primary-500" href="https://www.newfireglobal.com//">Newfire</a>
+        <p class="text-sm text-darkslate-200"> 2024 - Current </p>
+      </div>
+      <div>
         <h3 class="text-lg font-semibold">Senior Data Scientist</h3>
         <a class="text-sm text-primary-500" href="https://www.cognizant.com/">Cognizant</a>
-        <p class="text-sm text-darkslate-200"> 2022 - Current </p>
+        <p class="text-sm text-darkslate-200"> 2022 - 2024 </p>
       </div>
       <div>
         <h3 class="text-lg font-semibold">ML Engineer</h3>
         <a class="text-sm text-primary-500" href="https://iasolver.es/"> Solver IA </a>
         <p class="text-sm text-darkslate-200"> 2022 - 2023 </p>
       </div>
+      <!-- 
       <div>
         <h3 class="text-lg font-semibold">ML Researcher</h3>
         <a class="text-sm text-primary-500" href="https://www.upv.es/"> UPV </a>
         <p class="text-sm text-darkslate-200"> 2018 - 2022 </p>
       </div>
-      <!-- 
-      <a href="/work">
-        <button class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-primary underline-offset-4 hover:underline h-10 px-4 py-2 pl-0">
-          View More
-        </button>
-      </a>
       -->
     </div>
   </div>
